Create a basic floor and draw it to the screen.

--- a/Platforms/Platforms.csproj
+++ b/Platforms/Platforms.csproj
@@ -42,8 +42,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
+    <Compile Include="Floor.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameContent.cs" />
+    <Compile Include="Land.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
