--- a/Platforms/Platforms.csproj
+++ b/Platforms/Platforms.csproj
@@ -46,8 +46,10 @@
     <Compile Include="Game1.cs" />
     <Compile Include="GameContent.cs" />
     <Compile Include="Land.cs" />
+    <Compile Include="Level.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tile.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
