Button Class Outline

--- a/Platforms/Platforms.csproj
+++ b/Platforms/Platforms.csproj
@@ -41,6 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Button.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Game1.cs" />
