--- a/Platforms/Platforms.csproj
+++ b/Platforms/Platforms.csproj
@@ -48,6 +48,7 @@
     <Compile Include="GameContent.cs" />
     <Compile Include="Land.cs" />
     <Compile Include="Level.cs" />
+    <Compile Include="LevelCounter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tile.cs" />
