--- a/Platforms/Platforms.csproj
+++ b/Platforms/Platforms.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Button.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="DrawMouse.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameContent.cs" />
