Add a Control screen so a player can review what the game controls are and a win screen for when they complete all the levels

--- a/Platforms/Platforms.csproj
+++ b/Platforms/Platforms.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Button.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="ControlsList.cs" />
     <Compile Include="DrawMouse.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Game1.cs" />
